--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
 </head>
 <body>
     <main>
-        <section id="container">
+        <section id="container"> <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>Programação</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>O que é clara e salgada, cabe em um olho e pesa uma tonelada?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p> A lagrima</p>
+                </div>
+            </div>
+        </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>O que o nadador faz para bater o recorde?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Nada</p>
                     </div>
                 </div>
             </article>
@@ -23,30 +33,30 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>O que cai de pé e corre deitado?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>A chuva</p>
                     </div>
                 </div>
             </article> <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>O que de dia tem quatro pés e a noite seis?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>A cama</p>
                     </div>
                 </div>
             </article> <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>Qual é o céu que não possui estrelas?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>O céu da boca</p>
                     </div>
                 </div>
             </article>
